--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 MONGODB_URI="mongodb+srv://Saadnaeem:Saadnaeem123@nexttodo.onscgqm.mongodb.net/?appName=NextTodo"
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
